Made changes to the Settings page UI so that it can communicate with the server and update various credentials. Also built user profile apis.

--- a/Gabbetto.Word/Controls/Input/PasswordEntryControl.xaml
+++ b/Gabbetto.Word/Controls/Input/PasswordEntryControl.xaml
@@ -10,6 +10,7 @@
             >
     <!-- Grey underline -->
     <Border BorderBrush="{StaticResource ForegroundDarkBrush}"
+            IsEnabled="{Binding Pending, Converter={local:BooleanInvertConverter}}"
             BorderThickness="0 0 0 0.5">
 
         <Grid Background="{StaticResource ForegroundLightBrush}">
@@ -121,6 +122,8 @@
 
             <!-- Edit Button Container -->
             <Grid Grid.Column="2" 
+                  HorizontalAlignment="Right"
+                  VerticalAlignment="Center"
                   local:AnimateFadeInProperty.Value="{Binding Editing, Converter={local:BooleanInvertConverter}}">
 
                 <!-- Edit button -->
@@ -138,6 +141,19 @@
 
             </Grid>
 
+            <!-- Working spinner Container -->
+            <Grid Grid.Column="2" 
+                  local:AnimateFadeInProperty.Value="{Binding Pending}"
+                  HorizontalAlignment="Right"
+                  VerticalAlignment="Center">
+
+                <Border Padding="0 0 5 0">
+                    <TextBlock Style="{StaticResource SpinningText}"
+                               Foreground="{StaticResource ForegroundDarkBrush}"/>
+                </Border>
+
+            </Grid>
+            
             <StackPanel Grid.Column="2"
                         Orientation="Horizontal">
 
