Finished with the user settings api's implementation... and fixed some UI bugs.

--- a/Gabbetto.Word/Controls/Input/PasswordEntryControl.xaml
+++ b/Gabbetto.Word/Controls/Input/PasswordEntryControl.xaml
@@ -76,7 +76,7 @@
                          Grid.Row="0"
                          Tag="{Binding CurrentPasswordHintText}"
                          x:Name="CurrentPassword"
-                         PasswordChanged="CurrentPassword_PasswordChanged"
+                         PasswordChanged="CurrentPassword_PasswordChanged"                         
                          Opacity="0"                     
                          FontSize="{StaticResource FontSizeRegular}"                     
                          FontFamily="{StaticResource LatoRegular}"
@@ -85,6 +85,7 @@
                          local:FocusProperty.Value="{Binding Editing}"
                          local:SelectProperty.Value="{Binding Editing}"
                          local:AnimateFadeInProperty.Value="{Binding Editing}"
+                         local:EditModeClosedProperty.Value="{Binding IsCommitFinished}"
                          />
 
             <!-- New Password -->
@@ -98,7 +99,8 @@
                          FontFamily="{StaticResource LatoRegular}"
                          Padding="2"
                          Margin="10 10 15 8"                                            
-                         local:AnimateFadeInProperty.Value="{Binding Editing}"/>
+                         local:AnimateFadeInProperty.Value="{Binding Editing}"
+                         local:EditModeClosedProperty.Value="{Binding IsCommitFinished}"/>
 
             <!-- Confirm Password -->
             <PasswordBox Grid.Column="1"
@@ -111,14 +113,16 @@
                          FontFamily="{StaticResource LatoRegular}"
                          Padding="2"
                          Margin="10 10 15 8"                                          
-                         local:AnimateFadeInProperty.Value="{Binding Editing}"/>
+                         local:AnimateFadeInProperty.Value="{Binding Editing}"
+                         local:EditModeClosedProperty.Value="{Binding IsCommitFinished}"/>
 
             <!-- Content -->
             <TextBlock Text="{Binding FakePassword}"
                        Grid.Column="1"
                        Margin="15 8"
                        VerticalAlignment="Center"
-                       local:AnimateFadeInProperty.Value="{Binding Editing, Converter={local:BooleanInvertConverter}}"/>
+                       local:AnimateFadeInProperty.Value="{Binding Editing, Converter={local:BooleanInvertConverter}}"
+                       />
 
             <!-- Edit Button Container -->
             <Grid Grid.Column="2" 
