--- a/Gabbetto.Word/Controls/SideMenuControl.xaml
+++ b/Gabbetto.Word/Controls/SideMenuControl.xaml
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:Fasseto.Word"
              xmlns:core="clr-namespace:Fasseto.Word.Core;assembly=Fasseto.Word.Core"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300"
+             >
 
     <UserControl.Template>
         <ControlTemplate TargetType="UserControl">
