--- a/Gabbetto.Word/Controls/Friends/AddSearch/AddSearchListItemControl.xaml
+++ b/Gabbetto.Word/Controls/Friends/AddSearch/AddSearchListItemControl.xaml
@@ -4,9 +4,100 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Fasseto.Word"
+             xmlns:core="clr-namespace:Fasseto.Word.Core;assembly=Fasseto.Word.Core"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+             d:DesignWidth="300">
+    
+    <UserControl.Resources>
+        <Style x:Key="ContentStyle" TargetType="ContentControl">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ContentControl">
+
+                        <!-- Content -->
+                        <Border x:Name="background" Background="{StaticResource ForegroundLightBrush}">
+
+                            <Grid x:Name="container" Background="Transparent">
+
+                                <Grid.ColumnDefinitions>
+                                    <!-- Profice picture -->
+                                    <ColumnDefinition Width="auto"/>
+                                    
+                                    <!-- Main content -->
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <!-- Profile picture padding -->
+                                <Border Grid.Column="0"
+                                        Padding="8 15">
+
+                                    <!-- Profile picture background-->
+                                    <Border Background="{Binding ProfilePictureRGB, Converter={local:StringRGBToBrushConverter}}"
+                                            Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"
+                                            CornerRadius="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"
+                                            Height="40">
+                                        <!-- Profice picture initials-->
+                                        <TextBlock Text="{Binding Initials}"
+                                                   HorizontalAlignment="Center"
+                                                   VerticalAlignment="Center"
+                                                   Foreground="{StaticResource ForegroundLightBrush}"
+                                                   FontSize="{StaticResource FontSizeLarge}"
+                                                   FontFamily="{StaticResource LatoRegular}"/>
+                                    </Border>
+                                </Border>
+
+                                <!-- Main content -->
+                                <Border Grid.Column="1" Padding="0 0 15 0">
+                                    <StackPanel VerticalAlignment="Center">
+                                        <!-- Name -->
+                                        <TextBlock Text="{Binding Name}"
+                                                   Padding="0 0 0 2"       
+                                                   Foreground="{StaticResource WordLightBlueBrush}"
+                                                   FontFamily="{StaticResource LatoRegular}"
+                                                   TextTrimming="CharacterEllipsis"/>
+                                        <!-- Message -->
+                                        <TextBlock Text="{Binding Message}"
+                                                   Padding="0 2 0 0"
+                                                   FontFamily="{StaticResource LatoRegular}"
+                                                   Foreground="{StaticResource ForegroundDarkBrush}"
+                                                   TextTrimming="CharacterEllipsis"/>
+                                    </StackPanel>
+                                </Border>
+                            </Grid>
+                        </Border>
+
+                        <ControlTemplate.Triggers>
+                            <DataTrigger Binding="{Binding IsSelected}" Value="True">
+                                <Setter Property="Background" TargetName="background" Value="{StaticResource WordVeryLightBlueBrush}"/>
+                            </DataTrigger>
+
+                            <EventTrigger RoutedEvent="MouseEnter">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation To="{StaticResource WordVeryLightBlue}" Duration="0:0:0.3" Storyboard.TargetName="container" Storyboard.TargetProperty="Background.Color"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+
+                            <EventTrigger RoutedEvent="MouseLeave">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation To="Transparent" Duration="0:0:0.3" Storyboard.TargetName="container" Storyboard.TargetProperty="Background.Color"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Background" TargetName="container" Value="{StaticResource ForegroundDarkBrush}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+
+    <ContentControl d:DataContext="{x:Static core:SearchAddListItemDesignModel.Instance}"
+                    Style="{StaticResource ContentStyle}"/>
+
 </UserControl>
