--- a/Gabbetto.Word/Controls/Friends/FriendRequest/FriendRequestListControl.xaml
+++ b/Gabbetto.Word/Controls/Friends/FriendRequest/FriendRequestListControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Fasseto.Word.FriendRequestListControl"
+﻿<local:SideMenuBasePage x:TypeArguments="core:FriendRequestListViewModel"  x:Class="Fasseto.Word.FriendRequestListControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -18,4 +18,4 @@
             </ItemsControl>
         </ScrollViewer>
     </Grid>
-</UserControl>
+</local:SideMenuBasePage>
