--- a/Gabbetto.Word/Controls/Friends/AddSearch/AddSearchListItemControl.xaml
+++ b/Gabbetto.Word/Controls/Friends/AddSearch/AddSearchListItemControl.xaml
@@ -76,9 +76,10 @@
                                                     Content="Add"
                                                     FontSize="{StaticResource FontSizeSmall}"                                                                                                
                                                     HorizontalAlignment="Right"                                                    
-                                                    Margin="0 0 -10 0"
+                                                    Margin="0 0 0 0"
+                                                    Padding="0"
                                                     Height="30"
-                                                    Width="122"
+                                                    Width="100"
                                                     x:Name="add"/>
                                         </Grid>
                                         
