--- a/Gabbetto.Word/Controls/Friends/FriendRequest/FriendRequestListControl.xaml
+++ b/Gabbetto.Word/Controls/Friends/FriendRequest/FriendRequestListControl.xaml
@@ -7,9 +7,11 @@
              xmlns:core="clr-namespace:Fasseto.Word.Core;assembly=Fasseto.Word.Core"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid DataContext="{x:Static core:FriendRequestListDesignModel.Instance}" Background="{StaticResource ForegroundLightBrush}">
+    <Grid DataContext="{x:Static core:FriendRequestListDesignModel.Instance}" Background="{StaticResource ForegroundLightBrush}"
+          x:Name="Grid">
         <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <ItemsControl ItemsSource="{Binding Items}">
+            <ItemsControl ItemsSource="{Binding Items}"
+                          x:Name="Items">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <local:FriendRequestListItemControl/>
