--- a/Gabbetto.Word/Controls/Input/Search/SearchItemControl.xaml
+++ b/Gabbetto.Word/Controls/Input/Search/SearchItemControl.xaml
@@ -5,12 +5,28 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Fasseto.Word"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Background="{StaticResource ForegroundDarkBrush}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
-    </Grid>
+             d:DesignHeight="50" d:DesignWidth="300">
+
+    <Border Background="{StaticResource ForegroundLightDarkBrush}"
+            CornerRadius="20">
+        <Grid>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="20"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Style="{StaticResource ChatPageIconGrowButton}"
+                Content="{StaticResource FontAwesomeSearchIcon}"/>
+
+            <TextBox Grid.Column="1"
+                 Tag="Search user..."
+                 Margin="0 5 5 5"
+                 FontSize="{StaticResource FontSizeRegular}"
+                 Background="Transparent"
+                 BorderThickness="0"
+                 Padding="10 8 0 0"/>
+        </Grid>
+    </Border>
 </UserControl>
