--- a/Gabbetto.Word/Controls/Input/Search/SearchItemControl.xaml
+++ b/Gabbetto.Word/Controls/Input/Search/SearchItemControl.xaml
@@ -4,8 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Fasseto.Word"
+             xmlns:core="clr-namespace:Fasseto.Word.Core;assembly=Fasseto.Word.Core"
              mc:Ignorable="d" 
-             d:DesignHeight="50" d:DesignWidth="300">
+             d:DesignHeight="50" d:DesignWidth="300"
+             d:DataContext="{x:Static core:SearchItemDesignModel.Instance}">
 
     <Border Background="{StaticResource ForegroundLightDarkBrush}"
             CornerRadius="23">
@@ -22,13 +24,13 @@
                     Foreground="{StaticResource ForegroundDarkBrush}"/>
 
             <TextBox Grid.Column="1"
-                     Tag="Search user..."
+                     Tag="{Binding SearchBarText}"
                      Margin="0 5 5 5"
                      FontSize="{StaticResource FontSizeRegular}"
                      Background="Transparent"
                      BorderThickness="0"
                      Padding="10 8 0 0"
-                     />
+                     Text="{Binding InputText, UpdateSourceTrigger=PropertyChanged}"/>
         </Grid>
     </Border>
 </UserControl>
