Added a search item view model property to the SearchAddListViewModel, in order to create a binding to the search item control inside the add search list control.

--- a/Gabbetto.Word/Controls/Friends/AddSearch/AddSearchListControl.xaml
+++ b/Gabbetto.Word/Controls/Friends/AddSearch/AddSearchListControl.xaml
@@ -16,7 +16,8 @@
         </Grid.RowDefinitions>
 
         <local:SearchItemControl Grid.Row="0"
-                                 Margin="6 4 6 6"/>
+                                 Margin="6 4 6 6"
+                                 DataContext="{Binding SearchBar}"/>
 
         <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="1">
             <ItemsControl ItemsSource="{Binding Items}"
