--- a/Gabbetto.Word/Controls/Input/Search/SearchItemControl.xaml
+++ b/Gabbetto.Word/Controls/Input/Search/SearchItemControl.xaml
@@ -30,7 +30,12 @@
                      Background="Transparent"
                      BorderThickness="0"
                      Padding="10 8 0 0"
-                     Text="{Binding InputText, UpdateSourceTrigger=PropertyChanged}"/>
+                     Text="{Binding InputText, UpdateSourceTrigger=PropertyChanged}">
+
+                <TextBox.InputBindings>
+                    <KeyBinding Command="{Binding SearchUserCommand}"/>
+                </TextBox.InputBindings>
+            </TextBox>
         </Grid>
     </Border>
 </UserControl>
