Fixed the key binding issue of the text box element in the search item control.

--- a/Gabbetto.Word/Controls/Input/Search/SearchItemControl.xaml
+++ b/Gabbetto.Word/Controls/Input/Search/SearchItemControl.xaml
@@ -33,7 +33,7 @@
                      Text="{Binding InputText, UpdateSourceTrigger=PropertyChanged}">
 
                 <TextBox.InputBindings>
-                    <KeyBinding Command="{Binding SearchUserCommand}"/>
+                    <KeyBinding Command="{Binding SearchUserCommand}" Key="Return"/>
                 </TextBox.InputBindings>
             </TextBox>
         </Grid>
