--- a/Gabbetto.Word/Controls/Friends/AddSearch/AddSearchListItemControl.xaml
+++ b/Gabbetto.Word/Controls/Friends/AddSearch/AddSearchListItemControl.xaml
@@ -80,7 +80,9 @@
                                                     Padding="0"
                                                     Height="30"
                                                     Width="100"
-                                                    x:Name="add"/>
+                                                    x:Name="add"
+                                                    MouseEnter="add_MouseEnter"
+                                                    MouseLeave="add_MouseLeave"/>
                                         </Grid>
                                         
                                         
