Added new color types to the ColorType enum.

--- a/Gabbetto.Word/Controls/Friends/FriendRequest/FriendRequestListItemControl.xaml
+++ b/Gabbetto.Word/Controls/Friends/FriendRequest/FriendRequestListItemControl.xaml
@@ -85,8 +85,8 @@
                                                     Width="100"
                                                     Margin="0 0 0 0"
                                                     x:Name="decline"
-                                                    MouseEnter="accept_MouseEnter"
-                                                    MouseLeave="accept_MouseLeave"/>
+                                                    MouseEnter="decline_MouseEnter"
+                                                    MouseLeave="decline_MouseLeave"/>
                                         </Grid>
                                     </StackPanel>
                                 </Border>
