--- a/Gabbetto.Word/Controls/Friends/AddSearch/AddSearchListItemControl.xaml
+++ b/Gabbetto.Word/Controls/Friends/AddSearch/AddSearchListItemControl.xaml
@@ -81,8 +81,7 @@
                                                     Height="30"
                                                     Width="100"
                                                     x:Name="add"
-                                                    MouseEnter="add_MouseEnter"
-                                                    MouseLeave="add_MouseLeave"/>
+                                                    />
                                         </Grid>
                                         
                                         
@@ -123,6 +122,7 @@
     </UserControl.Resources>
 
     <ContentControl d:DataContext="{x:Static core:SearchAddListItemDesignModel.Instance}"
-                    Style="{StaticResource ContentStyle}"/>
+                    Style="{StaticResource ContentStyle}"
+                    x:Name="contentControl"/>
 
 </UserControl>
